--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -3,10 +3,16 @@
     flex-direction: column;
 }
 header{
-    height: 50px;
+    height: 60px;
     padding: 5px;
     margin-bottom: 5px;
-    color: black;
+    color: white;
+}
+.point{
+    padding: 5px;
+    border-radius: 11px;
+    width: 25%;
+    text-align: center;
 }
 footer{
     width: 100%;
@@ -48,7 +54,13 @@ img{
 }
 .center{
     text-align: center;
-}           
+}  
+.datta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+}         
 @media only screen and (max-width: 768px){
     .App{
         width: 90%;
